# week2_attachment

./: .gitignore
part_a/: report.md
part_b/boma-analytics/: main.py  pyproject.toml  report.md
part_b/boma-analytics/.github/workflows/: db_ingest.yml
part_b/boma-analytics/config/: config.yaml
part_b/boma-analytics/notebooks/: beatiful-soup-play.ipynb  buyRestKenya.ipynb  property 24.ipynb  property pro.ipynb
part_b/boma-analytics/src/boma_analytics/: __init__.py  db.py  db_ingest.py  export_to_csv.py  preprocess.py
part_b/boma-analytics/src/boma_analytics/sources/: buyrentkenya.py  property24.py  property_pro.py
part_c/: DataScienceDB.db  report.md
part_d/: DataScienceDB.db  report.md
part_h/: DataScienceDB.db  Data_science_students.csv  Data_science_students.xlsx
