[project]
name = "boma-analytics"
version = "0.1.0"
description = "Kenyan real estate data  analytics"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pymongo[srv]>=4.17.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]

[project.scripts]
boma-analytics = "boma_analytics.main:main"

[dependency-groups]
dev = [
    "notebook>=7.5.7",
    "pytest>=9.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boma_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
